# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: lint-check.yml
page_analyzer/: app.py
page_analyzer/templates/: main.html  url.html  urls.html
